May 10, 2020
  updated jar dependencies

2.0.1 - 2019-01-28
  updated build.gradle

2.0.0 - 2018-10-10
  updated to use spring framework to load properties