@@ -15,6 +15,8 @@ targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.StrainSynonymFix'
 String myAppName = 'StrainSynonymFix'
 
+project.archivesBaseName = myAppName
+
 repositories {
     mavenCentral()
 }
@@ -22,15 +24,15 @@ repositories {
 dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'commons-net:commons-net:3.6'
-    compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.5.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.5.RELEASE'
+    compile 'org.apache.logging.log4j:log4j-api:2.16.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.16.0'
+    compile 'org.springframework:spring-beans:5.1.6.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.6.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
-    baseName = myAppName
     manifest {
         attributes(
             'Built-By': System.getProperty('user.name'),
