@@ -8,5 +8,5 @@ APPDIR=/home/rgddata/pipelines/$APPNAME
 cd $APPDIR
 
 java -Dspring.config=$APPDIR/../properties/default_db.xml \
-    -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
+    -Dlog4j.configurationFile=file://$APPDIR/properties/log4j2.xml \
     -jar lib/$APPNAME.jar "$@"
