@@ -1,3 +1,6 @@
+Dec 20, 2021
+  upgraded log4j to avoid zero day exploit
+
 May 10, 2020
   updated jar dependencies
 
